Removed Symmetric Key encryption Added public-key encryption Further testing needed.